<resources>
    <string name="app_name">TIC-TAC-TOE</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="play_text">PLAY</string>
    <string name="how_to_play_text">HOW TO PLAY</string>
    <string name="exit_text">EXIT</string>
    <string name="game_mode">Game Mode</string>
    <string name="start_game_button_text">START GAME</string>
    <string name="single_player_button_text"> vs Computer</string>
    <string name="multiplayer_button_text"> vs Player 2</string>
    <string name="player2">PLAYER 2:</string>
    <string name="player1">PLAYER 1:</string>
    <string name="player_letter">PLAYER LETTER:</string>
    <string name="game_paused_text">GAME PAUSED</string>
    <string name="start">START</string>
    <string name="game_is_a_draw">Game is a DRAW</string>
    <string name="score_zero">0</string>
    <string name="current_player_indicator_imageview">imageview to indicate current player</string>
    <string name="pause_icon_discribtion">image to pause game</string>
    <string name="five_by_five">5 X 5</string>
    <string name="four_by_four">4 X 4</string>
    <string name="three_by_three">3 X 3</string>
    <string name="board_type">BOARD TYPE:</string>
    <string name="how_to_play_guide">Tic tac toe is a simple 2 player game played on a m x m sized board.\n\n
        A player can chose a letter (X or O). \n\n
        To win:\n
        player must have m of his letters(i.e. 3 in a 3X3 board and so on) in a straight line vertically, horizontally or diagonally.</string>
</resources>
