<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ayomide.gbogboade.tic_tac_toe.LauncherScreenActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="48sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            style="@style/launch_screen_buttons_style"
            android:onClick="play"
            android:text="@string/play_text"/>

        <Button
            style="@style/launch_screen_buttons_style"
            android:onClick="about"
            android:text="@string/how_to_play_text"/>

    </LinearLayout>
</LinearLayout>
