<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_mode"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <RadioGroup
            android:id="@+id/num_of_players_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/single"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="32dp"
                android:checked="false"
                android:text="@string/single_player_button_text"/>

            <RadioButton
                android:id="@+id/multi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/multiplayer_button_text"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/player1"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <Spinner
                    android:id="@+id/player1_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="wrap_content"
                    android:focusable="true"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/player2"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <Spinner
                    android:id="@+id/player2_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="wrap_content"
                    android:focusable="true"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/board_type"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <RadioGroup
            android:id="@+id/board_size_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/board3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/three_by_three"/>

            <RadioButton
                android:id="@+id/board4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/four_by_four"/>

            <RadioButton
                android:id="@+id/board5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:text="@string/five_by_five"/>
        </RadioGroup>
    </LinearLayout>

</LinearLayout>