<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ayomide.gbogboade.tic_tac_toe.HowToPlayActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:layout_margin="16dp"
        android:text="@string/how_to_play_text"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:layout_width="match_parent"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAllCaps="true"
        android:text="@string/how_to_play_guide"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="normal"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/play_text"
        android:onClick="play_"/>
</LinearLayout>
